# firstStepsOpenGL

./: .gitignore  CMakeLists.txt  README.md  ShaderCode.cpp  ShaderCode.h  ShaderProgram.cpp  ShaderProgram.h  main.cpp
Shaders/: simple.frag  simple.vert
